--- a/views/documents/index.jade
+++ b/views/documents/index.jade
@@ -4,7 +4,7 @@ p
 	a(class='button', href='/documents/new') + New Document
 
 ul
-	- for (d in documents) {
+	- for (var d in documents) {
 	li
 		a(class='button', href='/documents/' + documents[d].id + '/edit') Edit
 		a(class='button destroy', href='/documents/' + documents[d].id) Delete
