--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,8 @@ html
   head
     title= 'Nodepad'
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='/stylesheets/aristo/jquery-ui-1.8.5.custom.css')
     script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js')
+    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/jquery-ui.min.js')    
   body!= body
     script(type='text/javascript', src='/javascripts/application.js')
