--- a/views/documents/index.jade
+++ b/views/documents/index.jade
@@ -1,13 +1,28 @@
-h1 Your Documents
+#left.outline-view
+	#DocumentTitles
+		ul#document-list
+			li#document-row-template(style='display: none')
+				a(id='document_{{ id }}') {{ title }}
 
-p
-	a(class='button', href='/documents/new') + New Document
+	ul.toolbar
+		li
+			a#create-document(href='/documents/new')
+				+
+		li
+			a#delete-document(href='#')
+				-
 
-ul
-	- for (var d in documents) {
+.content-divider
+
+.content
+	#html-container(style='display: none')
+	#editor-container
+		div.title
+			input.title(name='d[title]')= d.title
+		textarea#editor(name='d[data]')
+
+ul#controls.toolbar
 	li
-		a(class='button', href='/documents/' + documents[d].id + '/edit') Edit
-		a(class='button destroy', href='/documents/' + documents[d].id) Delete
-		a(href='/documents/' + documents[d].id)
-			=documents[d].title
-	- }
+		a#save-button(href='#') Save
+	li
+		a#html-button(href='#') HTML
