--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,10 +1,30 @@
 !!!
 html
-  head
-    title= 'Nodepad'
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    link(rel='stylesheet', href='/stylesheets/aristo/jquery-ui-1.8.5.custom.css')
-    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js')
-    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/jquery-ui.min.js')    
-  body!= body
-    script(type='text/javascript', src='/javascripts/application.js')
+	head
+		title= 'Nodepad'
+		//- link(rel='stylesheet', href='/stylesheets/style.css')
+		link(rel='stylesheet', href='/stylesheets/frames.css')
+		link(rel='stylesheet', href='/stylesheets/aristo/jquery-ui-1.8.5.custom.css')
+		script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js')
+		script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.7/jquery-ui.min.js')    
+	body	
+		#container
+			#header
+				ul
+					li
+						h1
+							//- a(href='/') #{nameAndVersion(appName, version)}
+						- if (typeof currentUser !== 'undefined')
+						li.right
+							a#logout(href='/sessions') Log Out
+						li.right
+							form.search(action='/search')
+								input(name='s', value='Search')
+			//- !{flashMessages}
+			!= body
+		script(type='text/javascript', src='/javascripts/application.js')
+		script(type='text/javascript')
+			$(function() {
+				if (typeof Documents !== 'undefined')
+				Documents.reset(!{JSON.stringify(documents)});
+			});
